--- a/dhcp.org
+++ b/dhcp.org
@@ -26,7 +26,6 @@
 #+RESULTS:
 : ->KEYWORD
 
-
 ** Elisp
 #+BEGIN_SRC elisp
     (defun buff-basename ()
@@ -42,7 +41,7 @@
 #+RESULTS:
 : buff-name
 
-
+   
 * DHCP Info
 
 ** Key Resources
@@ -77,46 +76,20 @@
    | options |    312 | Optional parameters field.  See the options documents for a list of defined options. | rest   |                                          |
 
 
-
-
 ** DHCP Options
-   Built from [[https://tools.ietf.org/html/rfc2132]]
 
+   Built from [[https://tools.ietf.org/html/rfc2132]]
+   [[file:./parse-dhcp-options.lisp]]
+
+   What should we return?  Hash table, keyed on code?  An object ...
+   
 #+tblname: dhcp-options
    | code | unit-length | number | Name                                     | Notes                                    |
    |      |             |        | <40>                                     | <40>                                     |
    |------+-------------+--------+------------------------------------------+------------------------------------------|
-   |    0 |           0 |      0 | Pad Option                               | Can be used to pad other options so that they are aligned to the word boundary; is not followed by length byte |
-   |  255 |           0 |      0 | end option                               |                                          |
    |    1 |           4 |      1 | subnet mask                              | Must be sent before the router option (option 3) if both are included |
    |    2 |           4 |      1 | time offset                              |                                          |
    |   15 |           1 |      n | domain name                              |                                          |
-   |   53 |           1 |      1 | dhcp message type                        |                                          |
-   |   54 |           4 |      1 | server id                                |                                          |
-
-#+BEGIN_SRC lisp  :var tn=dhcp-options :results value code
-  (let ((codes (cdddr tn)))
-    `(defvar *dhcp-optons*
-               (quote ,(mapcar #'(lambda(row)
-                                    (trivia:match
-                                        row
-                                      ((list* code unit-length number name rest)
-                                       (list name code unit-length number))))
-                               codes)
-                      )
-       )
-    )
-#+END_SRC
-
-#+RESULTS:
-#+BEGIN_SRC lisp
-
-(DEFVAR *DHCP-OPTONS* '((255 0) (1 4) (2 4) (15 1) (53 1) (54 4)))
-#+END_SRC
-
-#+RESULTS:
-: *DHCP-OPTONS*
-
 
 
 ** DHCP Message Types
@@ -131,34 +104,6 @@
    |     6 | DHCPNAK      |
    |     7 | DHCPRELEASE  |
    |     8 | DHCPINFORM   |
-
-#+tblename: dhcp-server-id
- Code   Len            Address
-   +-----+-----+-----+-----+-----+-----+
-   |  54 |  4  |  a1 |  a2 |  a3 |  a4 |
-   +-----+-----+-----+-----+-----+-----+
-
-
-3 	Router 	Multiples of 4 octets 	Available routers, should be listed in order of preference
-4 	Time server 	Multiples of 4 octets 	Available time servers to synchronise with, should be listed in order of preference
-5 	Name server 	Multiples of 4 octets 	Available IEN 116 name servers, should be listed in order of preference
-6 	Domain name server 	Multiples of 4 octets 	Available DNS servers, should be listed in order of preference
-7 	Log server 	Multiples of 4 octets 	Available log servers, should be listed in order of preference.
-8 	Cookie server 	Multiples of 4 octets 	Cookie in this case means "fortune cookie" or "quote of the day", a pithy or humorous anecdote often sent as part of a logon process on large computers; it has nothing to do with cookies sent by websites.
-9 	LPR Server 	Multiples of 4 octets 	
-10 	Impress server 	Multiples of 4 octets 	
-11 	Resource location server 	Multiples of 4 octets 	
-12 	Host name 	Minimum of 1 octet 	
-13 	Boot file size 	2 octets 	Length of the boot image in 4KiB blocks
-14 	Merit dump file 	Minimum of 1 octet 	Path where crash dumps should be stored
-15 	Domain name 	Minimum of 1 octet 	
-16 	Swap server 	4 octets 	
-17 	Root path 	Minimum of 1 octet 	
-18 	Extensions path 	Minimum of 1 octet 	
-255 	End 	0 octets 	Used to mark the end of the vendor option field 
-
-
-* Code Gen
 
 ** defclass 
   
@@ -194,36 +139,37 @@
   (pprint
      `(progn
         (defmethod ,(->symbol (serapeum:concat "read-" name "-from-stream")) ((obj ,(->symbol name)) input-stream)
-            ,@(mapcar #'(lambda(row)
-                          (trivia:match 
-                              row
-                            ((list field octets descr da-type notes)
-                             (let ((type (intern (string-upcase da-type) :keyword)))
-                               (cond
-                                 ((eq type :mac) ;; 
-                                  `(setf (,(->symbol field) obj)
-                                         (loop :for i :below ,octets :collect (read-byte input-stream))))
-                                 ((eq type :rest)
-                                  `(setf (,(->symbol field) obj) (loop
-                                                                    :for x = (read-byte  input-stream nil nil)
-                                                                    :while x :collect x
-                                                                    )))
-                                 ;; Strings have a fixed length
-                                 ;; Maybe we should handle fixed-length, pascal, and c with different
-                                 ;; keywords?
-                                 ((eq type :string)
-                                  `(setf (,(->symbol field) obj)
-                                         (loop :for i :below ,octets :collect (read-byte input-stream))))
-                                 ((eq type :int)
-                                  `(setf (,(->symbol field) obj) (nums-and-txt:octets->num (nums-and-txt:read-octets ,octets input-stream) :endian :big)))
-                                 (t
-                                  (error "Unexpected type ~a" row))
-                                 )))))
-                      (cddr  clazz))
-            )
+          ,@(mapcar #'(lambda(row)
+                        (trivia:match 
+                            row
+                          ((list field octets descr da-type notes)
+                           (let ((type (intern (string-upcase da-type) :keyword)))
+                             (cond
+                               ((eq type :mac) ;; 
+                                `(setf (,(->symbol field) obj)
+                                       (loop :for i :below ,octets :collect (read-byte input-stream))))
+                               ((eq type :rest)
+                                `(setf (,(->symbol field) obj) (loop
+                                                                  :for x = (read-byte  input-stream nil nil)
+                                                                  :while x :collect x
+                                                                  )))
+
+                               ;; Strings have a fixed length
+                               ;; Maybe we should handle fixed-length, pascal, and c with different
+                               ;; keywords?
+                               ((eq type :string)
+                                `(setf (,(->symbol field) obj)
+                                       (loop :for i :below ,octets :collect (read-byte input-stream))))
+                               ((eq type :int)
+                                `(setf (,(->symbol field) obj) (nums-and-txt:octets->num (nums-and-txt:read-octets ,octets input-stream) :endian :big)))
+                               (t
+                                (error "Unexpected type ~a" row))
+                               )))))
+                    (cddr  clazz))
           )
         )
      )
+    )
 #+END_SRC
 
 #+RESULTS:
@@ -253,7 +199,7 @@
                                ((eq type :string)
                                 `(write-sequence (,(->symbol field) obj) out))
                                ((eq type :int)
-                                `(write-seq (number->octets (,(->symbol field) obj) :n ,octets :endian :big) out))
+                                `(write-sequence (number->octets (,(->symbol field) obj) :n ,octets :endian :big) out))
                                (t
                                 (error "Unexpected type ~a" row))
                                )))))
@@ -298,11 +244,16 @@
 
 
 ** Decode the dhcp options
-#+BEGIN_SRC lisp :output value 
-   (options *a*)
+#+BEGIN_SRC lisp :results output
+   (parse-options (options *a*) :debug t)
 #+END_SRC
 
 #+RESULTS:
-| 53 | 1 | 3 | 54 | 4 | 172 | 24 | 200 | 15 | 50 | 4 | 172 | 24 | 200 | 213 | 12 | 18 | 108 | 97 | 109 | 98 | 100 | 97 | 45 | 100 | 101 | 98 | 45 | 115 | 116 | 114 | 101 | 116 | 99 | 104 | 55 | 13 | 1 | 28 | 2 | 3 | 15 | 6 | 119 | 12 | 44 | 47 | 26 | 121 | 42 | 61 | 19 | 255 | 62 | 100 | 238 | 243 | 0 | 1 | 0 | 1 | 36 | 113 | 83 | 159 | 0 | 22 | 62 | 100 | 238 | 243 | 255 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 |
+: dhcp-message-type discover
+: server-identifier: #(172 24 200 15) 
+: request ip address=#(172 24 200 213)
+: hostname=lambda-deb-stretch
+: parameter requests
+: rfc4174 - iSNS,n=159,len(seq)=719
 
    
