--- a/work/plan.org
+++ b/work/plan.org
@@ -7,8 +7,6 @@
 
 * Milestones
 
-** DONE Receive and decode a dhcp broadcast from a Xen Client
-
 ** Real DHCP and routing for RBPI
 
 ** Automated Xen network deployments
@@ -16,7 +14,11 @@
 *** Use cases
     - Configure a new subnet with a router and 100 clients, where each client is a new Ubuntu
 
+
 ** Provide DHCP and routing services for a Xen Client
+
+** newer versions of RBPI support PXE boots
+   This is our over-the-air update.  
 
 
 
