--- a/readme.org
+++ b/readme.org
@@ -35,11 +35,11 @@
 #+END_SRC
 
 #+RESULTS: orgfiles
-| [[file:./dhcp.org]]      |
-| [[file:./readme.org]]    |
-| [[file:./README.org]]    |
-| [[file:./work/plan.org]] |
-| [[file:./work/work.org]] |
+| [[file:./devdocs/dhcp-options.org]] |
+| [[file:./devdocs/dhcp.org]]         |
+| [[file:./readme.org]]               |
+| [[file:./work/plan.org]]            |
+| [[file:./work/work.org]]            |
 
 
 ** Lisp source files
