added a few more http decoders

--- a/devdocs/dhcp.org
+++ b/devdocs/dhcp.org
@@ -245,4 +245,11 @@
 :  (VENDOR-CLASS (97 110 100 114 111 105 100 45 100 104 99 112 45 57))
 :  (CLIENT-PARAMS-REQUEST 1 3 6 15 26 28 51 58 59 43))
 
-   
+
+#+BEGIN_SRC lisp
+   (format nil "~X" 119)
+#+END_SRC   
+
+#+RESULTS:
+: 6D
+
