--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,13 @@
 #+title: dhcp server implemented in common lisp
 
+* TODO create the CLOS object from a macro in lisp
+  We are currently doing this in dhcp.org.  It's going to be alot
+  better if we table walk this in lisp.  We can use macros seeded from
+  global variables.
+
+* TODO make a CLOS object from sequence.
+  Return's a CLOS object, and a subseq of the rest of the buffer
+
 * Goals
   A research project to explore what can be done with a programable
   dhcp server
@@ -35,11 +43,12 @@
 #+END_SRC
 
 #+RESULTS: orgfiles
-| [[file:./devdocs/dhcp-options.org]] |
-| [[file:./devdocs/dhcp.org]]         |
-| [[file:./readme.org]]               |
-| [[file:./work/plan.org]]            |
-| [[file:./work/work.org]]            |
+| [[file:./devdocs/dhcp-options.org]]       |
+| [[file:./devdocs/dhcp-options-table.org]] |
+| [[file:./devdocs/dhcp.org]]               |
+| [[file:./readme.org]]                     |
+| [[file:./work/plan.org]]                  |
+| [[file:./work/work.org]]                  |
 
 
 ** Lisp source files
@@ -48,9 +57,11 @@
 #+END_SRC
 
 #+RESULTS:
+| [[file:dhcp-bootp-fields.lisp]]  |
 | [[file:dhcp-clos.lisp]]          |
 | [[file:dhcp-dehydrate.lisp]]     |
 | [[file:dhcp-hydrate.lisp]]       |
+| [[file:dhcp-options-table.lisp]] |
 | [[file:dhcp-server.lisp]]        |
 | [[file:package.lisp]]            |
 | [[file:parse-dhcp-options.lisp]] |
