--- a/devdocs/dhcp.org
+++ b/devdocs/dhcp.org
@@ -127,41 +127,27 @@
 
 ** Decode the dhcp options
    
+*** TODO Reproduce failure on rbpi
+
 #+BEGIN_SRC lisp :results output verbatim
   (let* ((ipA (handle-dhcp-message *a*))
-         (x (decode-dhcp-options (options ipA))))
-    (print x)
-    (print (options ipA))
-    (print (encode-dhcp-options x))
-    (print (flexi-streams:with-output-to-sequence (opp :element-type '(unsigned-byte 8))
-					  (stream-serialize ipA opp)))
+         (buff (response->buff ipA)))
+    (print buff)
     )
 
 #+END_SRC
 
 #+RESULTS:
-#+begin_example
+: 
+: #(2 1 6 0 53 15 192 107 0 0 0 0 0 0 0 0 192 168 1 1 192 168 1 1 0 0 0 0 208 119
+:   20 71 40 244 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+:   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+:   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+:   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+:   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+:   0 0 0 0 0 0 0 0 0 0 0 0 0 0 99 130 83 99 53 1 2 1 4 255 255 255 0 3 4 192 168
+:   1 1 51 4 0 0 0 120 1 4 192 168 1 1 6 8 8 8 8 8 4 4 4 4) 
 
-#<DHCP-OPTIONS mtype=2,restof=((SUBNET FF FF FF 0) (ROUTERS (C0 A8 1 1))
-                               (LEASE-TIME 78) (SUBNET C0 A8 1 1)
-                               (DNS-SERVERS (8 8 8 8) (4 4 4 4)))> 
-(53 1 2 1 4 255 255 255 0 3 4 192 168 1 1 51 4 0 0 0 120 1 4 192 168 1 1 6 8 8
- 8 8 8 4 4 4 4) 
-(53 1 2 1 4 255 255 255 0 3 4 192 168 1 1 51 4 0 0 0 120 1 4 192 168 1 1 6 8 8
- 8 8 8 4 4 4 4) 
-#(2 1 6 0 53 15 192 107 0 0 0 0 0 0 0 0 192 168 1 1 192 168 1 1 0 0 0 0 208 119
-  20 71 40 244 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-  0 0 0 0 0 0 0 0 0 0 0 0 0 0 99 130 83 99 53 1 2 1 4 255 255 255 0 3 4 192 168
-  1 1 51 4 0 0 0 120 1 4 192 168 1 1 6 8 8 8 8 8 4 4 4 4) 
-#+end_example
-
-
-: (53 1 2 1 4 255 255 255 0 3 4 192 168 1 1 51 4 0 0 0 120 :DHCP-SERVER 192 168 1
-:  1 :DNS-SERVER 8 8 8 8 4 4 4 4) 
 
 
 #+BEGIN_SRC lisp
